# backend

./: pyproject.toml
.github/workflows/: deploy.yml
docker/: Dockerfile  docker-compose.yaml
scripts/: start.sh
src/: main.py
src/app/: alembic.ini
src/app/domain/: base.py  users.py
src/app/migrations/: env.py
src/app/migrations/versions/: 6967ad519472_.py
src/app/models/: base.py  users.py
src/app/repositories/: users.py
src/app/repositories/clients/: __init__.py  alchemy.py  alchemy_utils.py  base.py
src/app/serializers/: auth.py
src/app/services/: auth.py
src/app/views/: __init__.py  auth.py
src/core/: app.py  config.py  db.py
