[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Bulat Kurbanov <kurbanovbul@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
sentry-sdk = "^2.13.0"
orjson = "^3.10.7"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
